Don't traverse non-stacked layer under composited child in traverseNonCompositingDescendants

Non-stacked layers under a composited object belong to the object, so
we should not traverse them in traverseNonCompositingDescendants.

BUG=634389
TEST=LayoutObjectTest.TraverseNonCompositingDescendantsInPaintOrder
TBR=nednguyen (for enabling the system health smoke test)

Review-Url: https://codereview.chromium.org/2214253002
Cr-Commit-Position: refs/heads/master@{#410070}

Former-commit-id: 6f716f1637685a30fd65cdec3a6b130690d56dbf